--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-google-generativeai==0.8.4 # Ensure proper version compatibility
-pillow==11.1.0          # For PIL.Image
-opencv-python==4.11.0.86 # For cv2 (or a version that is compatible)
-numpy==1.26.4        # Ensure compatibility
+google-generativeai==0.8.4
+Pillow==10.2.0
+opencv-python==4.9.0.80
+numpy==1.26.4
+pdf2image==1.16.0
+pdfkit==1.0.0
+streamlit==1.32.2
+wkkhtmltopdf 
